--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "react-dom": "^15.0.0",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
+    "recompose": "^0.21.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.4",
