--- a/package.json
+++ b/package.json
@@ -116,6 +116,7 @@
   "devDependencies": {
     "babel-eslint": "^7.1.0",
     "babel-plugin-istanbul": "^3.0.0",
+    "babel-preset-es2015-generators-async": "^6.3.13",
     "babel-preset-es2016": "^6.16.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^6.0.0",
